[gd_scene load_steps=9 format=2]

[ext_resource path="res://game_screen/levels/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://game_screen/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/player_frames.tres" type="SpriteFrames" id=3]
[ext_resource path="res://assets/darkness_shader.tres" type="Material" id=4]
[ext_resource path="res://game_screen/mirror_tile_map.gd" type="Script" id=5]
[ext_resource path="res://game_screen/levels/level.gd" type="Script" id=6]
[ext_resource path="res://game_screen/darkness.gd" type="Script" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 196609, -65535, 2, 196609, -65534, 2, 196609, -65533, 2, 196609, -65532, 2, 196609, -65531, 2, 196609, -65530, 2, 196609, -65529, 2, 196609, -65528, 2, 196609, -65527, 2, 196609, -65526, 2, 196609, -65525, 2, 196609, -65524, 2, 196609, -65523, 2, 196609, -65522, 2, 196609, -65521, 2, 196609, -65520, 2, 196609, -65519, 2, 196609, -65518, 2, 196609, -65517, 2, 0, -65516, 2, 196609, -65515, 2, 196609, -65514, 2, 196609, -65513, 2, 196609, -65512, 2, 196609, -65511, 2, 196609, -65510, 2, 196609, -65509, 2, 196609, -65508, 2, 196609, -65507, 2, 196609, -65506, 2, 196609, -65505, 2, 196609, -65504, 2, 196609, -65503, 2, 196609, -65502, 2, 196609, -65501, 2, 196609, -65500, 2, 196609, -65499, 2, 196609, -65498, 2, 196609, -65497, 2, 196609, -65496, 2, 0, 65535, 2, 65539, 19, 2, 65539, 40, 2, 65539, 131071, 2, 65539, 65555, 2, 65539, 65576, 2, 65539, 196607, 2, 65539, 131091, 2, 65539, 131112, 2, 65539, 262143, 2, 65539, 196627, 2, 65539, 196648, 2, 65539, 327679, 2, 65539, 262163, 2, 65539, 262184, 2, 65539, 393215, 2, 65539, 327699, 2, 65539, 327720, 2, 65539, 458751, 2, 65539, 393235, 2, 65539, 393256, 2, 65539, 524287, 2, 65539, 458771, 2, 65539, 458792, 2, 65539, 589823, 2, 65539, 524307, 2, 65539, 524328, 2, 65539, 655359, 2, 65539, 589843, 2, 65539, 589864, 2, 65539, 720895, 2, 65539, 655379, 2, 65539, 655400, 2, 65539, 786431, 2, 65539, 720915, 2, 65539, 720936, 2, 65539, 851967, 2, 65539, 786451, 2, 65539, 786472, 2, 65539, 917503, 2, 65539, 851987, 2, 65539, 852008, 2, 65539, 983039, 2, 65539, 917523, 2, 65539, 917544, 2, 65539, 1048575, 2, 65539, 983059, 2, 65539, 983080, 2, 65539, 1114111, 2, 65539, 1048595, 2, 65539, 1048616, 2, 65539, 1179647, 2, 65539, 1114131, 2, 131075, 1114152, 2, 65539, 1245183, 2, 65539, 1179688, 2, 65539, 1310719, 2, 65539, 1245224, 2, 65539, 1376255, 2, 0, 1310720, 2, 1, 1310721, 2, 1, 1310722, 2, 1, 1310723, 2, 1, 1310724, 2, 1, 1310725, 2, 1, 1310726, 2, 1, 1310727, 2, 1, 1310728, 2, 2, 1310760, 2, 65539, 1441791, 2, 65536, 1376256, 2, 65537, 1376257, 2, 65537, 1376258, 2, 65537, 1376259, 2, 65537, 1376260, 2, 65537, 1376261, 2, 65537, 1376262, 2, 65537, 1376263, 2, 65537, 1376264, 2, 0, 1376265, 2, 1, 1376266, 2, 1, 1376267, 2, 1, 1376268, 2, 1, 1376269, 2, 1, 1376270, 2, 1, 1376271, 2, 1, 1376272, 2, 1, 1376273, 2, 1, 1376274, 2, 1, 1376275, 2, 2, 1376296, 2, 65539, 1507327, 2, 65536, 1441792, 2, 65537, 1441793, 2, 65537, 1441794, 2, 65537, 1441795, 2, 65537, 1441796, 2, 65537, 1441797, 2, 65537, 1441798, 2, 65537, 1441799, 2, 65537, 1441800, 2, 65537, 1441801, 2, 65537, 1441802, 2, 65537, 1441803, 2, 65537, 1441804, 2, 65537, 1441805, 2, 65537, 1441806, 2, 65537, 1441807, 2, 65537, 1441808, 2, 65537, 1441809, 2, 65537, 1441810, 2, 65537, 1441811, 2, 65538, 1441832, 2, 65539, 1572863, 2, 131072, 1507328, 2, 131073, 1507329, 2, 131073, 1507330, 2, 131073, 1507331, 2, 131073, 1507332, 2, 131073, 1507333, 2, 131073, 1507334, 2, 131073, 1507335, 2, 131073, 1507336, 2, 131073, 1507337, 2, 131073, 1507338, 2, 131073, 1507339, 2, 131073, 1507340, 2, 131073, 1507341, 2, 131073, 1507342, 2, 131073, 1507343, 2, 131073, 1507344, 2, 131073, 1507345, 2, 131073, 1507346, 2, 131073, 1507347, 2, 0, 1507348, 2, 196609, 1507349, 2, 196609, 1507350, 2, 196609, 1507351, 2, 196609, 1507352, 2, 196609, 1507353, 2, 196609, 1507354, 2, 196609, 1507355, 2, 196609, 1507356, 2, 196609, 1507357, 2, 196609, 1507358, 2, 196609, 1507359, 2, 196609, 1507360, 2, 196609, 1507361, 2, 196609, 1507362, 2, 196609, 1507363, 2, 196609, 1507364, 2, 196609, 1507365, 2, 196609, 1507366, 2, 196609, 1507367, 2, 196609, 1507368, 2, 0 )
script = ExtResource( 5 )

[node name="Left" type="Node2D" parent="."]

[node name="LeftPlayer" parent="Left" instance=ExtResource( 2 )]

[node name="LeftPlayerSpawn" type="Position2D" parent="Left"]
position = Vector2( 18, 307 )

[node name="Right" type="Node2D" parent="."]
position = Vector2( 640, 0 )
scale = Vector2( -1, 1 )

[node name="DarknessTileMap" type="TileMap" parent="Right" groups=["damage"]]
material = ExtResource( 4 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 2
collision_mask = 0
format = 1
script = ExtResource( 7 )

[node name="Marker" type="Sprite" parent="Right/DarknessTileMap"]
visible = false
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 16, 16, 16, 16 )

[node name="RightPlayerSpawn" type="Position2D" parent="Right"]
position = Vector2( 8, 281 )

[node name="DarknessSpawn" type="Position2D" parent="Right"]
position = Vector2( 297, 360 )

[node name="RightPlayer" parent="Right" instance=ExtResource( 2 )]
is_mirror = true

[node name="Sprite" parent="Right/RightPlayer" index="0"]
frames = ExtResource( 3 )

[node name="SpreadingTimer" type="Timer" parent="."]

[connection signal="died" from="Left/LeftPlayer" to="." method="_on_LeftPlayer_died"]
[connection signal="joined" from="Left/LeftPlayer" to="." method="_on_LeftPlayer_joined"]
[connection signal="died" from="Right/RightPlayer" to="." method="_on_RightPlayer_died"]
[connection signal="timeout" from="SpreadingTimer" to="." method="_on_SpreadingTimer_timeout"]

[editable path="Right/RightPlayer"]
